kube_develop/kube_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kwetter-development
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: docker.pkg.github.com/kwetters6/frontend/frontend
        imagePullPolicy: IfNotPresent
        name: frontend
        ports: 
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
      imagePullSecrets:
      - name: github-docker-registry
