kube_develop/kube_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
  name: kwet-ingress
  namespace: kwetter-development
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    #cert-manager.io/cluster-issuer: "letsencrypt-development"    
    #nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: dev.woutervandenboorn.software
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  #tls:
  #- hosts:
    #- 
    #secretName: 
status:
  loadBalancer:
    ingress:
     - ip:
